# TuneHime

./: .gitignore  BUILD.md  COMMERCIALIZATION.md  LICENSE  LICENSE_CN.txt  MONETIZATION.md  README.md  REDESIGN.md  RELEASE_CHECKLIST.md  UI_DESIGN.md  build.bat  build_backend.py  build_installer.bat  build_release.bat  download_vbcable.bat  launch.pyw  pyproject.toml  requirements.txt  run.bat
electron-app/: activation.example.js  installer.nsh  main.js  package.json  preload.js
electron-app/src/: index.html
electron-app/src/js/: app.js
electron-app/src/styles/: main.css
python-backend/: server.py
src/ai_live_tuner/: __init__.py  app.py  audio_engine.py  dsp.py  logging_setup.py  settings.py
src/ai_live_tuner/qt_ui/: __init__.py  main_window.py  theme.py  widgets.py
src/ai_live_tuner/ui/: __init__.py  live_tab.py  route_tab.py  settings_tab.py  test_tab.py  theme.py  widgets.py
tests/: test_audio_engine.py  test_dsp.py  test_settings.py
