[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-live-tuner"
version = "0.5.0"
description = "Realtime live-stream vocal tuning prototype"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "sounddevice>=0.4.7",
  "pedalboard>=0.9.23",
  "PyQt6>=6.5",
]

[project.scripts]
ai-live-tuner = "ai_live_tuner.app:main"

[tool.setuptools.packages.find]
where = ["src"]
